# AgentGuard

./: .dockerignore  .gitignore  AgentGuard.md  compose.yaml  pyproject.toml
docker/: controller.Dockerfile  sandbox.Dockerfile
docs/: shell-exec-gateway-design.md
src/agentguard/: main.py
src/agentguard/api/: sandbox.py  tools.py
src/agentguard/gateway/: models.py  shell.py
src/agentguard/policy/: models.py  shell.py
src/agentguard/sandbox/: executor.py  models.py
tests/: test_health.py  test_shell_policy.py  test_tools_api.py
